force-app/main/default/objects/Forecast__c/Forecast__c.object-meta.xml
<CustomObject>
    <description>Stores forecasting data for sales trends</description>
    <sharingModel>ReadWrite</sharingModel>
    <label>Forecast</label>
    <nameField>
        <label>Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecasts</pluralLabel>
</CustomObject>