force-app/main/default/objects/Forecast__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Forecasts</relationshipName>
    <relationshipLabel>Forecasts</relationshipLabel>
    <type>Lookup</type>
</CustomField>