force-app/main/default/objects/Forecast__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Forecasted amount</description>
    <inlineHelpText>Enter the forecasted amount for this period</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>