force-app/main/default/objects/Forecast__c/fields/ForecastDate__c.field-meta.xml
<CustomField>
    <fullName>ForecastDate__c</fullName>
    <description>Date for the forecast period</description>
    <inlineHelpText>Select the date for this forecast period</inlineHelpText>
    <label>Forecast Date</label>
    <type>Date</type>
</CustomField>