force-app/main/default/objects/Forecast__c/fields/ForecastType__c.field-meta.xml
<CustomField>
    <fullName>ForecastType__c</fullName>
    <description>Type of forecast (Quota, Pipeline, etc.)</description>
    <inlineHelpText>Select the type of forecast</inlineHelpText>
    <label>Forecast Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>