force-app/main/default/objects/Forecast__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>Forecast period (Month/Quarter/Year)</description>
    <inlineHelpText>Select the period for this forecast</inlineHelpText>
    <label>Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>